<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_community">

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.eathaca.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.example.eathaca.ui.food.FoodFragment"
        android:label="@string/title_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.eathaca.ui.recipes.RecipeFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" />

</navigation>